--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node-uuid": "~1.4.1",
     "passport-twitter": "~1.0.2",
     "oauth": "~0.9.10",
-    "passport-ldsauth": "~0.9.1"
+    "passport-ldsauth": "~0.9.1",
+    "tel-carrier": "~1.3.9"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
