--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "passport-twitter": "~1.0.2",
     "oauth": "~0.9.10",
     "passport-ldsauth": "~0.9.1",
-    "tel-carrier": "~1.3.9"
+    "tel-carrier": "~1.3.9",
+    "json-storage": "~2.1.0",
+    "dom-storage": "~2.0.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
