--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "passport-ldsauth": "~0.9.1",
     "tel-carrier": "~1.3.9",
     "json-storage": "~2.1.0",
-    "dom-storage": "~2.0.0"
+    "dom-storage": "~2.0.0",
+    "tel-carrier-gateways": "~2.0.0",
+    "nodemailer": "~0.6.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
