--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "node-uuid": "~1.4.1",
     "passport-twitter": "~1.0.2",
     "oauth": "~0.9.10",
-    "passport-ldsauth": "~1.0.0",
+    "passport-lds-connect": "~1.0",
     "tel-carrier": "~1.3.9",
     "json-storage": "~2.1.0",
     "dom-storage": "~2.0.0",
