--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "angular-route": "~1.2.0",
     "angular-ui-router": "~0.2.0",
     "angular-ui-bootstrap": "~0.7.0",
-    "quizomatic": "~0.11.1"
+    "angular-bootstrap": "~0.10.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
